APPDEV-1191 : Reverting the Memcached and related refactoring
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@11354 842219ff-9341-0410-a943-573460bdd4de